--- a/src/style/style.css
+++ b/src/style/style.css
@@ -139,7 +139,7 @@ main #air-quality {
 /* Map
 ========================================*/
 main #mapid {
-  width: 900px;
+  width: 100%;
   height: 600px;
 }
 
@@ -270,7 +270,7 @@ main #mapid {
   }
 
   .data-container {
-    height: 40vh;
+    min-height: 40vh;
     width: 100% !important;
     text-align: center;
     border-radius: 0;
