--- a/src/style/style.css
+++ b/src/style/style.css
@@ -295,8 +295,9 @@ main #mapid {
 
   .error {
     width: 100%;
+    height: 100vh;
     position: absolute;
-    bottom: 0;
+    top: -200px;
     left: 0;
   }
 
