--- a/src/style/style.css
+++ b/src/style/style.css
@@ -296,8 +296,8 @@ main #mapid {
   .error {
     width: 100%;
     height: 100vh;
-    position: absolute;
-    top: -200px;
+    position: fixed;
+    top: 0px;
     left: 0;
   }
 
