--- a/src/style/style.css
+++ b/src/style/style.css
@@ -139,7 +139,7 @@ main #air-quality {
 /* Map
 ========================================*/
 main #mapid {
-  width: 100%;
+  width: 900px;
   height: 600px;
 }
 
@@ -285,6 +285,7 @@ main #mapid {
 
   .map-container #mapid {
     margin: 0 auto;
+    width: 100%;
     height: 300px;
   }
 
